[project]
name = "bobs_latent_optimizer"
description = "This custom node for ComfyUI is designed to optimize latent generation for use with FLUX, SDXL and SD3. It provides flexible control over aspect ratios, megapixel sizes, and upscale factors, allowing users to dynamically create latents that fit specific tiling and resolution needs."
version = "1.1.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/BobsBlazed/Bobs_Latent_Optimizer"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "bobsblazed"
DisplayName = "Bobs_Latent_Optimizer"
Icon = ""
